k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteorcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: meteorcloud-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/file
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 80
          - path: /api/workspaces
            pathType: Prefix
            backend:
              service:
                name: workspace-service
                port:
                  number: 80
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /api/metadata
            pathType: Prefix
            backend:
              service:
                name: metadata-service
                port:
                  number: 80
          - path: /api/links
            pathType: Prefix
            backend:
              service:
                name: link-service
                port:
                  number: 80
          - path: /api/audit
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /hub/workspaces
            pathType: Prefix
            backend:
              service:
                name: workspace-service
                port:
                  number: 80
          - path: /hub/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
